5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1759_2107.log
== TEST (2019-05-29 18:12:08) 
-- CODE:
st=input("insira sua string: ").upper()
a=st.count("A")
e=st.count("E")
i=st.count("I")
o=st.count("O")
u=st.count("U")
r=a+e+i+o+u
print(r)
print(size(st)-r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(size(st)-r)
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:13:13) 
-- CODE:
st=input("insira sua string: ").upper()
a=st.count("A")
e=st.count("E")
i=st.count("I")
o=st.count("O")
u=st.count("U")
r=a+e+i+o+u
s=size(st)
print(r)
print(s-r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    s=size(st)
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:13:30) 
-- CODE:
from numpy import*
st=input("insira sua string: ").upper()
a=st.count("A")
e=st.count("E")
i=st.count("I")
o=st.count("O")
u=st.count("U")
r=a+e+i+o+u
s=size(st)
print(r)
print(s-r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:14:04) 
-- CODE:
from numpy import*
st=input("insira sua string: ").upper()
a=st.count("A")
e=st.count("E")
i=st.count("I")
o=st.count("O")
u=st.count("U")
r=a+e+i+o+u
s=size(st)
print(r)
print(s-r)
print(s)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:15:46) 
-- CODE:
from numpy import*
st=input("insira sua string: ").upper()
a=st.count("A")
e=st.count("E")
i=st.count("I")
o=st.count("O")
u=st.count("U")
r=a+e+i+o+u
s=len(st)
print(r)
print(s-r)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:15:53) 
-- CODE:
from numpy import*
st=input("insira sua string: ").upper()
a=st.count("A")
e=st.count("E")
i=st.count("I")
o=st.count("O")
u=st.count("U")
r=a+e+i+o+u
s=len(st)
print(r)
print(s-r)

-- EXECUTION TIME:
0.51008
-- TEST CASE 1:
---- input:
ABCD
---- correct output:
1
3
---- user output:
1
3
-- TEST CASE 2:
---- input:
STRING
---- correct output:
1
5
---- user output:
1
5
-- TEST CASE 3:
---- input:
TESTE
---- correct output:
2
3
---- user output:
2
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
